src/app.css
/* additionall css on top of kpop */

body {
  /* NOTE(longsleep): Required for popper Tooltips which somehow cause scrolling
   * for low height bodies
   */
  overflow: hidden;
}


#bg {
  background-color: white;
  background-image: url(../src/images/kopano-icon.svg);
  background-repeat:no-repeat;
  background-position: center center;
  background-size: auto 50%;
}

#root, main {
  background-color: white;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

